# vscode-local-history-parser

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
.devcontainer/: .gitignore  Dockerfile  devcontainer.json  docker-compose.override.yml-template  docker-compose.yml
.devcontainer/feature-configure-python/: devcontainer-feature.json  install.sh
.devcontainer/feature-configure-user/: devcontainer-feature.json  install.sh
src/local_history_parser/: cli.py  history.py  model.py  util.py
test/unit/: test_util.py
tests/unit/: test_util.py
