[metadata]
name = local-history-parser
version = attr: local_history_parser.VERSION
author = Rodolfo Puig
author_email = rodolfo@puig.io
description = Local history parser for Visual Studio Code
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
python_requires = >=3.7, <4
package_dir =
    = src
include_package_data = True
zip_safe = False

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*
    *.tests
    *.tests.*
    *.egg-info*

[options.entry_points]
console_scripts =
    lhp = local_history_parser:cli.main

[options.extras_require]
dev =
    black
    flake8
    flake8-black
    flake8-isort
    isort
    pep8-naming
    pre-commit
test =
    pytest
    pytest-mock
    pytest-cov