[metadata]
name = local-history-parser
version = attr: local_history_parser.VERSION
author = Rodolfo Puig
author_email = rodolfo@puig.io
description = Local History parser for Visual Studio Code
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
packages = find_namespace:
python_requires = >=3.7, <4
package_dir =
    =src
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lhp = local_history_parser:cli.main

[options.extras_require]
dev =
    black>=22.1.0,<23.0.0
    flake8>=5.0.0,<6.0.0
    flake8-black>=0.3.0,<1.0.0
    flake8-isort>=5.0.0,<6.0.0
    isort>=5.10.1,<6.0.0
    pep8-naming>=0.13.2,<1.0.0
    pre-commit
test =
    covdefaults
    coverage[toml]>=5.1,<7.0.0
    pytest>=6.2.0,<7.0.0
    pytest-cov>=2.10.0,<3.0.0
    pytest-mock>=3.6.0,<4.0.0
